--- a/index.html
+++ b/index.html
@@ -50,8 +50,40 @@
 
     <p id="p01">In the <b>middle</b> of this sentence <strong>This text is strong</strong> and now it's <i>back</i> to normal text</p> <!--bold, strong and Italicized used here-->
 
-    <p>Now I'll point out that <em>This text is emphasized</em>, but now it's back to normal again</p>
+    <p>Below is a photo that <em>is also a link</em>, which will take you to cleveland.com</p>
 
+    <hr />
+
+    <a href="http://www.cleveland.com">
+        <img src="images/20160909_161539746_iOS.jpg" width="300" height="300" />
+    </a>
+    <hr />
+
+    <img src="programming.gif" alt="Computer Man" width="75" height="75">
+
+    <p>
+        <img src="smiley.gif" alt="Smiley face" style="float:right" width="42" height="42">
+        The image will float to the right of this text.
+    </p>
+
+    <p>
+        <img src="smiley.gif" alt="Smiley face" style="float:left" width="42" height="42">
+        The image will float to the left of this text.
+    </p>
+
+    
+    <img src="planets.gif" alt="Planets" usemap="#planetmap" width="126" height="126">
+        <map name="planetmap">
+            <area shape="rect" coords="0,0,82,126" alt="Sun" href="sun.htm">
+            <area shape="circle" coords="90,58,3" alt="Mercury" href="mercur.htm">
+            <area shape="circle" coords="124,58,8" alt="Venus" href="venus.htm">
+        </map>
+
+    <ul>
+        <li>OSU v Rutgers</li>
+        <li>Clemson v Louisville</li>
+        <li>Michigan v Wisconsin</li>
+    </ul>
 
 
 
